Stats hidden by default.  Added row to toggle stats on/off.  Fixed bug with plot not resizing caused by removing level/temp icons.  Added new filter sites link, but not yet functional.

--- a/css/graphs.css
+++ b/css/graphs.css
@@ -4,6 +4,18 @@ h1 {
     text-align: center;
 }
 
+#toggle_row {
+    margin-top: 15px;
+}
+
+.main-container {
+    margin-top: 10px;
+}
+
+.toggle_link {
+    text-align: center;
+    font-size: 2rem;
+}
 .quick-stats {
     font-size: 2rem;
 }
